# openclaw-plugin-ruvector

./: LICENSE  README.md  client.ts  com.ttt.ruvector-server.plist  config.ts  embeddings.ts  index.ts  migration.ts  package-lock.json  package.json  setup.sh  tsconfig.json  types.ts  vitest.config.ts
server/: Cargo.toml
server/ruvector-server/: Cargo.toml
server/ruvector-server/src/: state.rs
server/ruvector-server/src/routes/: collections.rs  points.rs
server/src/: main.rs
tests/: client.test.ts  config.test.ts  embeddings.test.ts  hooks.test.ts  tools.test.ts
