[package]
name = "ruvector-server-bin"
version = "0.1.0"
edition = "2021"
description = "Standalone RuVector server binary for the openclaw-plugin-ruvector stack"
license = "MIT"

[[bin]]
name = "ruvector-server"
path = "src/main.rs"

[dependencies]
ruvector-server = "0.1.30"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
