[package]
name = "ruvector-server-bin"
version = "0.1.0"
edition = "2021"
description = "Standalone RuVector server binary — patched with delete endpoints and similarity scores"
license = "MIT"

[[bin]]
name = "ruvector-server"
path = "src/main.rs"

[dependencies]
ruvector-server = { path = "ruvector-server" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
