[package]
name = "ruvector-server"
version = "2.0.3"
edition = "2021"
license = "MIT"
description = "High-performance REST API server for RuVector vector databases (patched: delete endpoints, similarity scores, dimension tracking)"

[dependencies]
ruvector-core = "2.0.5"
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1.41", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.1"
parking_lot = "0.12"
